--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     </header>
     <section id="headline">
         <div class="center">
-            <b>
-                <h2 id="name"> Hey there. I’m Micheal <br>
-                    <div id="job">I’m a software developer</div>
+                <h2 id="name"><b> Hey there. I’m Micheal</b> <br>
+                    <b id="job">I’m a software developer </b>
                 </h2>
-            </b>
         </div>
         <div class="center"><h3 id="story"> I can help you build a product , feature or website Look through some of my work and
             experience! If you like what you see and have a project you need coded,
@@ -37,7 +35,7 @@
             <i class="fa fa-angellist"></i>
         </div>
         <div class="arrow-down">
-            <img src="icons/Disabled.svg" class="disabled">
+            <img src="icons/Disabled.svg" class="disabled" alt="disabled icon">
         </div>
 
     </section>
