Fix header and headline section in index.html file

--- a/index.html
+++ b/index.html
@@ -13,26 +13,31 @@
 <body>
     <header class="header">
         <div>
-            <h1 id="welcome">Welcome</h1>
+            <a href="index.html" id="welcome">Welcome</a>
         </div>
-        <img src="icons/menu.png" class="material-icons" alt="menu icon">
+        <nav>
+            <img src="icons/menu.png" class="material-icons" alt="menu icon">
+        </nav>  
     </header>
     <section id="headline">
         <div class="center">
-                <h2 id="name"><b> Hey there. I’m Micheal</b> <br>
+                <h1 id="name"><b> Hey there. I’m Micheal</b> <br>
                     <b id="job">I’m a software developer </b>
-                </h2>
+                </h1>
         </div>
-        <div class="center"><h3 id="story"> I can help you build a product , feature or website Look through some of my work and
+        <div class="center"><p id="story"> I can help you build a product , feature or website Look through some of my work and
             experience! If you like what you see and have a project you need coded,
-            don’t hestiate to contact me.</h3>
+            don’t hestiate to contact me.</p>
         </div>
-        <div id="icons">
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-linkedin"></i>
-            <i class="fa fa-medium"></i>
-            <i class="fa fa-github"></i>
-            <i class="fa fa-angellist"></i>
+        <div >
+            <ul id="icons">
+                <li><a><i class="fa fa-twitter"></i></a></li>
+                <li> <a></a><i class="fa fa-linkedin"></i></a></li>
+                <li> <a> <i class="fa fa-medium"></i></a></li>
+                <li> <a></a><i class="fa fa-github"></i></a></li>
+                <li> <a> <i class="fa fa-angellist"></i></a></li>
+            </ul>
+           
         </div>
         <div class="arrow-down">
             <img src="icons/Disabled.svg" class="disabled" alt="disabled icon">
