--- a/index.html
+++ b/index.html
@@ -31,11 +31,21 @@
         </div>
         <div >
             <ul id="icons">
-                <li><a><i class="fa fa-twitter"></i></a></li>
-                <li> <a></a><i class="fa fa-linkedin"></i></a></li>
-                <li> <a> <i class="fa fa-medium"></i></a></li>
-                <li> <a></a><i class="fa fa-github"></i></a></li>
-                <li> <a> <i class="fa fa-angellist"></i></a></li>
+                <li>
+                    <a><i class="fa fa-twitter"></i></a>
+                </li>
+                <li> 
+                    <a><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li> 
+                    <a> <i class="fa fa-medium"></i></a>
+                </li>
+                <li> 
+                    <a><i class="fa fa-github"></i></a>
+                </li>
+                <li> 
+                    <a> <i class="fa fa-angellist"></i></a>
+                </li>
             </ul>
            
         </div>
