--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div >
             <ul id="icons">
                 <li>
-                    <a href="www.twiiter.com"><i class="fa fa-twitter"></i></a>
+                    <a href="www.twiiter.com/mike-dev"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li> 
-                    <a href="www.linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="www.linkedin/mike-dev"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li> 
-                    <a href="www.medium.com"> <i class="fa fa-medium"></i></a>
+                    <a href="www.medium.com/mike-dev"> <i class="fa fa-medium"></i></a>
                 </li>
                 <li> 
-                    <a href="www.github.com"><i class="fa fa-github"></i></a>
+                    <a href="www.github.com/mike-dev"><i class="fa fa-github"></i></a>
                 </li>
                 <li> 
-                    <a href="www.angellist.com"> <i class="fa fa-angellist"></i></a>
+                    <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
                 </li>
             </ul>
            
