Update contact form

--- a/index.html
+++ b/index.html
@@ -284,9 +284,6 @@
         </form>
     </div>
         
-
-   
-        
         <div>
             <ul class="icons">
                 <li>
@@ -305,6 +302,9 @@
                     <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
                 </li>
             </ul>
+            <div id="contact_form_img">
+                <img src="images\illustration-contact-form.png" alt="illustration contact form.png">
+            </div>
 
 
         </div>
