Fix webhint error in contact form image source

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 </li>
             </ul>
             <div id="contact_form_img">
-                <img src="images\illustration-contact-form.png" alt="illustration contact form.png">
+                <img src="images/illustration-contact-form.png" alt="illustration contact form.png">
             </div>
         </div>
         <div class="email_flex">
