--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
             <a href="index.html" id="welcome">Welcome</a>
         </div>
         <nav>
-           <a href="#"><img src="icons/menu.png" class="material-icons"  id="menu_icon"></a>
+           <a href="#"><img src="icons/menu.png" class="material-icons" alt="menu icon" id="menu_icon"></a>
         </nav>  
     </header>
     </div>
     <div id="menu"> 
     <div id="menu_flex">
         <div id="menulist">
-            <a href=""><img src="images/mobile menu/Icon.png" id="close_icon"> </a>
+            <a href=""><img src="images/mobile_menu/Icon.png" id="close_icon"> </a>
             <ul id="menu_liststyle">
                 <li><a href="#my_works" class="menu_list">Portfolio</a></li>
                 <li><a href="#about_me" class="menu_list">About</a></li>
-                <li><a href="#contact_me" class="menu_list">Contact</a></li>
+                <li><a href="#form_flex" class="menu_list">Contact</a></li>
             </ul>
         </div>
-        <img src="images/mobile menu/Shape.png" id="img_shape">
+        <img src="images/mobile_menu/Shape.png" id="img_shape">
     </div>
     </div>
 
