Fix webhint error

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <div id="menu"> 
     <div id="menu_flex">
         <div id="menulist">
-            <a href=""><img src="images/mobile_menu/Icon.png" id="close_icon"> </a>
+            <a href=""><img src="images/mobile_menu/Icon.png" id="close_icon" alt="menu close icon"> </a>
             <ul id="menu_liststyle">
                 <li><a href="#my_works" class="menu_list">Portfolio</a></li>
                 <li><a href="#about_me" class="menu_list">About</a></li>
                 <li><a href="#form_flex" class="menu_list">Contact</a></li>
             </ul>
         </div>
-        <img src="images/mobile_menu/Shape.png" id="img_shape">
+        <img src="images/mobile_menu/Shape.png" id="img_shape" alt="rectangle shape">
     </div>
     </div>
 
