Add popup window for project details

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio - Mobile</title>
+    <title>Micheal Oguntayo Portfolio Website</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -100,7 +100,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2">See Project</button>
+                            <button type="button" class="button2 See_Project">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2">See Project</button>
+                            <button type="button" class="button2 See_Project">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2">See Project</button>
+                            <button type="button" class="button2 See_Project">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2">See Project</button>
+                            <button type="button" class="button2 See_Project">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2">See Project</button>
+                            <button type="button" class="button2 See_Project">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2">See Project</button>
+                            <button type="button" class="button2 See_Project">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -321,8 +321,14 @@
         </div>
         
   </footer>  
-  <script src="myscripts.js"></script>
+  <section class="project"></section>
+  <script src="js/myscripts.js"></script>
+  <script src="./js/projects.js" type="module"></script>
+
 
 </body>
 
 </html>
+
+
+
