Update styles.css file

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2 See_Project">See Project</button>
+                            <button type="button" class="button2 See_Project btn1">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2 See_Project">See Project</button>
+                            <button type="button" class="button2 See_Project btn2">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2 See_Project">See Project</button>
+                            <button type="button" class="button2 See_Project btn3">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2 See_Project">See Project</button>
+                            <button type="button" class="button2 See_Project btn4">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2 See_Project">See Project</button>
+                            <button type="button" class="button2 See_Project btn5">See Project</button>
                         </form> 
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                     </div>
 
                         <form action="work.html">
-                            <button type="button" class="button2 See_Project">See Project</button>
+                            <button type="button" class="button2 See_Project btn6">See Project</button>
                         </form> 
                     </div>
                 </div>
