Update projects.js file to create project section dynamically

--- a/index.html
+++ b/index.html
@@ -84,130 +84,10 @@
                 <div class="green_box">
                 </div>
             </div>
-            <div class="large_screen">
-              <!-- First project -->
-            <div class="grid-container">
-                <div class="grid-item1"></div>
-                <div class="grid-item">
-                    <div class="center1">
-                        <h3 class="work_title">Multi-Post Stories Gain+Glory</h3>
-                        <div class="boxed_flex">
-
-                        <div class="boxed">Ruby on rails</div>
-                        <div class="boxed">css</div>
-                        <div class="boxed">JavaScript</div>
-                        <div class="boxed">html</div>
-                    </div>
-
-                        <form action="work.html">
-                            <button type="button" class="button2 See_Project btn1">See Project</button>
-                        </form> 
-                    </div>
-                </div>
-              </div>
-            <!-- second project -->
-            <div class="grid-container">
-                <div class="grid-item1"></div>
-                <div class="grid-item">
-                    <div class="center1">
-                        <h3 class="work_title">Multi-Post Stories Gain+Glory</h3>
-                        <div class="boxed_flex">
-
-                        <div class="boxed">Ruby on rails</div>
-                        <div class="boxed">css</div>
-                        <div class="boxed">JavaScript</div>
-                        <div class="boxed">html</div>
-                    </div>
-
-                        <form action="work.html">
-                            <button type="button" class="button2 See_Project btn2">See Project</button>
-                        </form> 
-                    </div>
-                </div>
-            </div>
-            <!-- Third project -->
-            <div class="grid-container">
-                <div class="grid-item1"></div>
-                <div class="grid-item">
-                    <div class="center1">
-                        <h3 class="work_title">Multi-Post Stories Gain+Glory</h3>
-                        <div class="boxed_flex">
-
-                        <div class="boxed">Ruby on rails</div>
-                        <div class="boxed">css</div>
-                        <div class="boxed">JavaScript</div>
-                        <div class="boxed">html</div>
-                    </div>
-
-                        <form action="work.html">
-                            <button type="button" class="button2 See_Project btn3">See Project</button>
-                        </form> 
-                    </div>
-                </div>
-              </div>
-               <!-- Fourth project -->
-               <div class="grid-container">
-                <div class="grid-item1"></div>
-                <div class="grid-item">
-                    <div class="center1">
-                        <h3 class="work_title">Multi-Post Stories Gain+Glory</h3>
-                        <div class="boxed_flex">
-
-                        <div class="boxed">Ruby on rails</div>
-                        <div class="boxed">css</div>
-                        <div class="boxed">JavaScript</div>
-                        <div class="boxed">html</div>
-                    </div>
-
-                        <form action="work.html">
-                            <button type="button" class="button2 See_Project btn4">See Project</button>
-                        </form> 
-                    </div>
-                </div>
-              </div>
-            <!-- Fifth project -->
-            <div class="grid-container">
-                <div class="grid-item1"></div>
-                <div class="grid-item">
-                    <div class="center1">
-                        <h3 class="work_title">Multi-Post Stories Gain+Glory</h3>
-                        <div class="boxed_flex">
-
-                        <div class="boxed">Ruby on rails</div>
-                        <div class="boxed">css</div>
-                        <div class="boxed">JavaScript</div>
-                        <div class="boxed">html</div>
-                    </div>
-
-                        <form action="work.html">
-                            <button type="button" class="button2 See_Project btn5">See Project</button>
-                        </form> 
-                    </div>
-                </div>
-              </div>
-            <!-- Sixth project -->
-            <div class="grid-container">
-                <div class="grid-item1"></div>
-                <div class="grid-item">
-                    <div class="center1">
-                        <h3 class="work_title">Multi-Post Stories Gain+Glory</h3>
-                        <div class="boxed_flex">
-
-                        <div class="boxed">Ruby on rails</div>
-                        <div class="boxed">css</div>
-                        <div class="boxed">JavaScript</div>
-                        <div class="boxed">html</div>
-                    </div>
-
-                        <form action="work.html">
-                            <button type="button" class="button2 See_Project btn6">See Project</button>
-                        </form> 
-                    </div>
-                </div>
-              </div>
-            
+            <div class="project_large_screen">   
             </div>
     </section>
+
     <div class="space"></div>
     <div id="about_me">
                 <h2 class="h2_style">About me</h2>
