--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 id="name"><b> Hey there. I’m Micheal</b> <br>
                 <b id="job">I’m a software developer </b>
             </h1>
-            <p class="story"> I can help you build a product , feature or website Look through some of my work and
+            <p class="story"> I can help you build a product, feature or website. Kindly look through some of my work and
                 experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>   
     </div>
         <div >
