Update social links

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <div >
             <ul class="icons">
                 <li>
-                    <a href="www.twiiter.com/mike-dev"><i class="fa fa-twitter"></i></a>
+                    <a href="https://github.com/oguntayomicheal"><i class="fa fa-github"></i></a>               
                 </li>
                 <li> 
-                    <a href="www.linkedin/mike-dev"><i class="fa fa-linkedin"></i></a>
+                    <a href="www.linkedin.com/in/ogunsmicky"><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/Oguns_micky"><i class="fa fa-twitter"></i></a>                                   
                 </li>
                 <li> 
                     <a href="www.medium.com/mike-dev"> <i class="fa fa-medium"></i></a>
-                </li>
-                <li> 
-                    <a href="www.github.com/mike-dev"><i class="fa fa-github"></i></a>
                 </li>
                 <li> 
                     <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
@@ -128,8 +128,8 @@
                     <div class="lang_boxed">Bootstrap</div>
                     <div class="lang_boxed">Ruby on rails</div>
                     <div class="lang_boxed">RSpec</div>
-                    <div class="lang_boxed">Capybara</div>
-                    <div class="lang_boxed">Selenium</div>
+                    <!-- <div class="lang_boxed">Capybara</div> -->
+                    <!-- <div class="lang_boxed">Selenium</div> -->
                 </div>  
             </div>
                 
@@ -175,23 +175,23 @@
             </div>
         </div>       
         <hr id="footer_hr_line">
-            <ul class="icons">
-                <li>
-                    <a href="www.twiiter.com/mike-dev"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li> 
-                    <a href="www.linkedin/mike-dev"><i class="fa fa-linkedin"></i></a>
-                </li>
-                <li> 
-                    <a href="www.medium.com/mike-dev"> <i class="fa fa-medium"></i></a>
-                </li>
-                <li> 
-                    <a href="www.github.com/mike-dev"><i class="fa fa-github"></i></a>
-                </li>
-                <li> 
-                    <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
-                </li>
-            </ul>
+        <ul class="icons">
+            <li>
+                <a href="https://github.com/oguntayomicheal"><i class="fa fa-github"></i></a>               
+            </li>
+            <li> 
+                <a href="www.linkedin.com/in/ogunsmicky"><i class="fa fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/Oguns_micky"><i class="fa fa-twitter"></i></a>                                   
+            </li>
+            <li> 
+                <a href="www.medium.com/mike-dev"> <i class="fa fa-medium"></i></a>
+            </li>
+            <li> 
+                <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
+            </li>
+        </ul> 
             <div id="contact_form_img">
                 <img src="images/illustration-contact-form.png" alt="illustration contact form.png">
             </div>
