--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
     
         <div class="email_flex">
-            <p class="email">oguntayomicheal@gmail.com</p>
+            <p class="email">oguntayomicheal1@gmail.com</p>
         </div>
         
   </footer>  
