Update about me section on index.html page

--- a/index.html
+++ b/index.html
@@ -89,16 +89,17 @@
     </section>
 
     <div class="space"></div>
-    <div id="about_me">
+    <section id="about_me">
                 <h2 class="h2_style">About me</h2>
-                <p class="story"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                <p class="story"> I was a UI/UX designer before learning how to code (Check out my UI/UX portfolio <a href="https://sites.google.com/view/mikeuiuxdesigns/home">here</a>). 
+                    <br>I can help you build a product, feature or website. Kindly Look through some of my works and experience! If you like what you see and have a project you need coded, 
                     don’t hestiate to contact me.</p>
                     <div class="button_flex2">
                         <form action="work.html">
-                            <button type="button" class="button2">Get My Resume</button>
+                            <a href="https://docs.google.com/document/d/1O99qTSgcgxUALZQFmDjSnXYyFYCxZnYxeAcUkNfVR30/edit?usp=sharing"><button type="button" class="button2">Get My Resume</button></a>
                         </form> 
                     </div>
-    </div>
+    </section>
 
 
     <div class="large_screen">
