Update navigation bar

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <a class="nav" href="#form_flex">Contact</a>
             </nav>        
     </div>
-    <div id="header_display">
-    <header class="header">
+    <header id="header_display">
+    <div class="header">
         <div>
             <a href="index.html" id="welcome">Welcome</a>
         </div>
         <nav>
            <a href="#"><img src="icons/menu.png" class="material-icons" alt="menu icon" id="menu_icon"></a>
         </nav>  
-    </header>
     </div>
+    </header>
     <div id="menu"> 
     <div id="menu_flex">
         <div id="menulist">
