Add animation for tech stacks

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
             </h1>
             <p class="story"> I can help you build a product, feature or website. Kindly look through some of my work and
                 experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>   
-    </div>
+        </div>
+        <div id="typeEffect_div">
+            <p id="stack_output">My Tech Stacks</p>
+            <span id="effect_span">
+                <p id="typed-output"></p>
+            </span>
+                       
+        </div>
+      
+
         <div >
             <ul class="icons">
                 <li>
@@ -70,8 +79,8 @@
                 </li>
             </ul> 
         </div>
-        <div class="arrow-down">
-            <img src="icons/Disabled.svg" class="disabled" alt="disabled icon">
+        <div class="arrow-down">         
+            <a class="nav" href="#my_works"><img src="icons/Disabled.svg" class="disabled" alt="disabled icon"></a>
         </div>
 
     </section>
@@ -208,7 +217,8 @@
   <script src="./js/projects.js" type="module"></script>
   <script src="./js/emailvalidate.js"></script>
   <script src="./js/localStorage.js"></script>
-
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+  <script src="./js/typeEffect.js" type="module"></script>
 
 </body>
 
