--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         <div >
             <ul class="icons">
                 <li>
-                    <a href="https://github.com/oguntayomicheal"><i class="fa fa-github"></i></a>               
+                    <a href="https://github.com/oguntayomicheal" target="_blank"><i class="fa fa-github"></i></a>               
                 </li>
                 <li> 
-                    <a href="www.linkedin.com/in/ogunsmicky"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/ogunsmicky" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/Oguns_micky"><i class="fa fa-twitter"></i></a>                                   
+                    <a href="https://twitter.com/Oguns_micky" target="_blank"><i class="fa fa-twitter"></i></a>                                   
                 </li>
                 <li> 
-                    <a href="www.medium.com/mike-dev"> <i class="fa fa-medium"></i></a>
+                    <a href="https://www.medium.com/@oguntayomicheal1" target="_blank"> <i class="fa fa-medium"></i></a>
                 </li>
                 <li> 
-                    <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
+                    <a href="https://wellfound.com/u/micheal-oguntayo" target="_blank"> <i class="fa fa-angellist"></i></a>
                 </li>
             </ul> 
         </div>
@@ -188,19 +188,19 @@
         <hr id="footer_hr_line">
         <ul class="icons">
             <li>
-                <a href="https://github.com/oguntayomicheal"><i class="fa fa-github"></i></a>               
+                <a href="https://github.com/oguntayomicheal" target="_blank"><i class="fa fa-github"></i></a>               
             </li>
             <li> 
-                <a href="www.linkedin.com/in/ogunsmicky"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ogunsmicky" target="_blank"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/Oguns_micky"><i class="fa fa-twitter"></i></a>                                   
+                <a href="https://twitter.com/Oguns_micky" target="_blank"><i class="fa fa-twitter"></i></a>                                   
             </li>
             <li> 
-                <a href="www.medium.com/mike-dev"> <i class="fa fa-medium"></i></a>
+                <a href="https://www.medium.com/@oguntayomicheal1" target="_blank"> <i class="fa fa-medium"></i></a>
             </li>
             <li> 
-                <a href="www.angellist.com/mike-dev"> <i class="fa fa-angellist"></i></a>
+                <a href="https://wellfound.com/u/micheal-oguntayo" target="_blank"> <i class="fa fa-angellist"></i></a>
             </li>
         </ul> 
             <div id="contact_form_img">
