--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <p class="h2_style h2_style_form">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
                 
                 <div class="center1" >
-                    <form action="https://formspree.io/f/xvoyggzp" method="POST" id="form">
+                    <form action="https://formspree.io/f/xvoyggzp" method="POST" id="form" target="_blank">
                         <input type="text" name="name" placeholder="full name" maxlength="30" class="stretch" id="saveName1" required>
                         <input type="email" name="email" placeholder="Email address"  class="stretch" id="saveEmail" required>
                         
