--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     don’t hestiate to contact me.</p>
                     <div class="button_flex2">
                         <form action="work.html">
-                            <a href="https://docs.google.com/document/d/1O99qTSgcgxUALZQFmDjSnXYyFYCxZnYxeAcUkNfVR30/edit?usp=sharing"><button type="button" class="button2">Get My Resume</button></a>
+                            <a href="https://docs.google.com/document/d/1O99qTSgcgxUALZQFmDjSnXYyFYCxZnYxeAcUkNfVR30/edit?usp=sharing" target="_blank"><button type="button" class="button2">Get My Resume</button></a>
                         </form> 
                     </div>
     </section>
